--- a/ProjectManager.Authentication/ProjectManager.Authentication.csproj
+++ b/ProjectManager.Authentication/ProjectManager.Authentication.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CEBE5CBD-A61D-4961-84D4-F8C7D5C83E18}</ProjectGuid>
+    <ProjectGuid>{47D4C6B4-D667-4337-A9FF-22E8A2382483}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ProjectManager.Repository</RootNamespace>
-    <AssemblyName>ProjectManager.Repository</AssemblyName>
+    <RootNamespace>ProjectManager.Authentication</RootNamespace>
+    <AssemblyName>ProjectManager.Authentication</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -42,9 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
-    <Compile Include="Models\Project.cs" />
+    <Compile Include="Models\Login.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Models\Task.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
