--- a/ProjectManager.Repository. Tests/ProjectManager.Repository. Tests.csproj
+++ b/ProjectManager.Repository. Tests/ProjectManager.Repository. Tests.csproj
@@ -5,11 +5,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CBBFA797-6E7A-4C53-B871-691584E05DEA}</ProjectGuid>
+    <ProjectGuid>{4C3B4D7E-A2DC-48A1-8967-CF9F36CF2D63}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ProjectManager.AuthTest</RootNamespace>
-    <AssemblyName>ProjectManager.AuthTest</AssemblyName>
+    <RootNamespace>ProjectManager.Repository.Tests</RootNamespace>
+    <AssemblyName>ProjectManager.Repository.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -49,16 +49,16 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LoginTest.cs" />
+    <Compile Include="ProjectTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ProjectManager.Authentication\ProjectManager.Authentication.csproj">
-      <Project>{47d4c6b4-d667-4337-a9ff-22e8a2382483}</Project>
-      <Name>ProjectManager.Authentication</Name>
+    <ProjectReference Include="..\ProjectManager.Repository\ProjectManager.Repository.csproj">
+      <Project>{cebe5cbd-a61d-4961-84d4-f8c7d5c83e18}</Project>
+      <Name>ProjectManager.Repository</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
